jswt-mir-lowering/src/snapshots/jswt_mir_lowering__class__test__class_declaration_ignores_class_fields.snap
---
source: jswt-mir-lowering/src/class.rs
expression: lowered

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_class_declaration_ignores_class_fields",
                    module: "module/test_class_declaration_ignores_class_fields",
                    start: 9,
                    end: 86,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_class_declaration_ignores_class_fields",
                        module: "module/test_class_declaration_ignores_class_fields",
                        start: 9,
                        end: 86,
                    },
                    source_elements: [],
                },
            },
        ],
    },
}
