jswt-mir-lowering/src/snapshots/jswt_mir_lowering__class__test__class_declaration_lowers_methods_into_functions.snap
---
source: jswt-mir-lowering/src/class.rs
expression: lowered

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_class_declaration_lowers_methods_into_functions",
                    module: "module/test_class_declaration_lowers_methods_into_functions",
                    start: 9,
                    end: 102,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_class_declaration_lowers_methods_into_functions",
                        module: "module/test_class_declaration_lowers_methods_into_functions",
                        start: 9,
                        end: 102,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_class_declaration_lowers_methods_into_functions",
                                    module: "module/test_class_declaration_lowers_methods_into_functions",
                                    start: 35,
                                    end: 87,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_class_declaration_lowers_methods_into_functions",
                                        module: "module/test_class_declaration_lowers_methods_into_functions",
                                        start: 35,
                                        end: 38,
                                    },
                                    value: "Array#len",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_class_declaration_lowers_methods_into_functions",
                                        module: "module/test_class_declaration_lowers_methods_into_functions",
                                        start: 38,
                                        end: 40,
                                    },
                                    parameters: [
                                        FormalParameterArg {
                                            span: Span {
                                                file: "test_class_declaration_lowers_methods_into_functions",
                                                module: "module/test_class_declaration_lowers_methods_into_functions",
                                                start: 35,
                                                end: 87,
                                            },
                                            ident: Identifier {
                                                span: Span {
                                                    file: "test_class_declaration_lowers_methods_into_functions",
                                                    module: "module/test_class_declaration_lowers_methods_into_functions",
                                                    start: 35,
                                                    end: 87,
                                                },
                                                value: "this",
                                            },
                                            type_annotation: TypeAnnotation {
                                                span: Span {
                                                    file: "test_class_declaration_lowers_methods_into_functions",
                                                    module: "module/test_class_declaration_lowers_methods_into_functions",
                                                    start: 35,
                                                    end: 87,
                                                },
                                                ty: Binding(
                                                    "ptr",
                                                ),
                                            },
                                        },
                                    ],
                                },
                                returns: Some(
                                    TypeAnnotation {
                                        span: Span {
                                            file: "test_class_declaration_lowers_methods_into_functions",
                                            module: "module/test_class_declaration_lowers_methods_into_functions",
                                            start: 42,
                                            end: 45,
                                        },
                                        ty: Binding(
                                            "i32",
                                        ),
                                    },
                                ),
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_class_declaration_lowers_methods_into_functions",
                                        module: "module/test_class_declaration_lowers_methods_into_functions",
                                        start: 35,
                                        end: 87,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Return(
                                                ReturnStatement {
                                                    span: Span {
                                                        file: "test_class_declaration_lowers_methods_into_functions",
                                                        module: "module/test_class_declaration_lowers_methods_into_functions",
                                                        start: 71,
                                                        end: 72,
                                                    },
                                                    expression: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                span: Span {
                                                                    file: "test_class_declaration_lowers_methods_into_functions",
                                                                    module: "module/test_class_declaration_lowers_methods_into_functions",
                                                                    start: 71,
                                                                    end: 72,
                                                                },
                                                                value: 0,
                                                                ty: Unknown,
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
